role api save solve