@@ -4,14 +4,23 @@ import com.hr.demo.dto.CreateRoleRequest;
 import com.hr.demo.dto.UpdateRoleRequest;
 import com.hr.demo.entity.CompanyEntity;
 import com.hr.demo.entity.RoleEntity;
+import com.hr.demo.exceptions.BadRequestException;
+import com.hr.demo.exceptions.DuplicateResourceException;
+import com.hr.demo.exceptions.ResourceNotFoundException;
+import com.hr.demo.exceptions.UnauthorizedException;
 import com.hr.demo.reaponse.RoleResponse;
 import com.hr.demo.repository.CompanyRepository;
 import com.hr.demo.repository.RoleRepository;
 import com.hr.demo.service.RoleService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,27 +29,32 @@ public class RoleServiceImpl implements RoleService {
     private final RoleRepository roleRepository;
     private final CompanyRepository companyRepository;
 
-    private RoleResponse map(RoleEntity role){
+    private RoleResponse map(RoleEntity role) {
         return new RoleResponse(
                 role.getId(),
                 role.getName(),
                 role.getDescription(),
-                role.getCompany().getId()
-        );
+                role.getCompany().getId());
     }
 
     // CREATE
     @Override
-    public RoleResponse createRole(CreateRoleRequest request) {
+    public RoleResponse createRole(CreateRoleRequest request, Long companyId) {
 
-        CompanyEntity company = companyRepository.findById(request.getCompanyId())
-                .orElseThrow(() -> new RuntimeException("Company not found"));
+        String name = request.getName() == null ? null : request.getName().trim();
+        if (name == null || name.isEmpty()) {
+            throw new BadRequestException("Role name is required");
+        }
 
-        if(roleRepository.existsByNameIgnoreCaseAndCompanyId(request.getName(), request.getCompanyId()))
-            throw new RuntimeException("Role already exists in this company");
+        CompanyEntity company = companyRepository.findById(companyId)
+                .orElseThrow(() -> new ResourceNotFoundException("Company not found"));
+
+        if (roleRepository.existsByNameIgnoreCaseAndCompanyId(name, companyId)) {
+            throw new DuplicateResourceException("Role already exists in this company");
+        }
 
         RoleEntity role = RoleEntity.builder()
-                .name(request.getName())
+                .name(name)
                 .description(request.getDescription())
                 .company(company)
                 .build();
@@ -50,12 +64,26 @@ public class RoleServiceImpl implements RoleService {
 
     // UPDATE
     @Override
-    public RoleResponse updateRole(Long roleId, UpdateRoleRequest request) {
+    public RoleResponse updateRole(Long roleId, UpdateRoleRequest request, Long companyId) {
 
         RoleEntity role = roleRepository.findById(roleId)
-                .orElseThrow(() -> new RuntimeException("Role not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Role not found"));
 
-        role.setName(request.getName());
+        if (!role.getCompany().getId().equals(companyId)) {
+            throw new UnauthorizedException("Access denied");
+        }
+
+        String name = request.getName() == null ? null : request.getName().trim();
+        if (name == null || name.isEmpty()) {
+            throw new BadRequestException("Role name is required");
+        }
+
+        if (!role.getName().equalsIgnoreCase(name)
+                && roleRepository.existsByNameIgnoreCaseAndCompanyId(name, companyId)) {
+            throw new DuplicateResourceException("Role already exists in this company");
+        }
+
+        role.setName(name);
         role.setDescription(request.getDescription());
 
         return map(roleRepository.save(role));
@@ -63,19 +91,25 @@ public class RoleServiceImpl implements RoleService {
 
     // DELETE
     @Override
-    public void deleteRole(Long roleId) {
-        if(!roleRepository.existsById(roleId))
-            throw new RuntimeException("Role not found");
+    public void deleteRole(Long roleId, Long companyId) {
+        RoleEntity role = roleRepository.findById(roleId)
+                .orElseThrow(() -> new ResourceNotFoundException("Role not found"));
+
+        if (!role.getCompany().getId().equals(companyId)) {
+            throw new UnauthorizedException("Access denied");
+        }
 
         roleRepository.deleteById(roleId);
     }
 
     // GET SINGLE
     @Override
-    public RoleResponse getRole(Long roleId) {
-        return roleRepository.findById(roleId)
-                .map(this::map)
-                .orElseThrow(() -> new RuntimeException("Role not found"));
+    public RoleResponse getRole(Long roleId, Long companyId) {
+        RoleEntity role = roleRepository.findById(roleId)
+                .orElseThrow(() -> new ResourceNotFoundException("Role not found"));
+        if (!role.getCompany().getId().equals(companyId))
+            throw new UnauthorizedException("Access denied");
+        return map(role);
     }
 
     // GET COMPANY ROLES
@@ -84,6 +118,27 @@ public class RoleServiceImpl implements RoleService {
         return roleRepository.findAllByCompanyId(companyId)
                 .stream()
                 .map(this::map)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public Page<RoleResponse> listRoles(Long companyId, int page, int size, String search, String sortBy,
+            String sortDirection) {
+        Sort sort = Sort.by(Sort.Direction.fromString(sortDirection == null ? "ASC" : sortDirection),
+                sortBy == null ? "name" : sortBy);
+        var pageable = PageRequest.of(page, size, sort);
+        var p = roleRepository.searchByCompany(companyId, search, pageable);
+        return new PageImpl<>(p.getContent().stream().map(this::map).collect(Collectors.toList()), pageable,
+                p.getTotalElements());
+    }
+
+    @Override
+    public RoleResponse setStatus(Long roleId, boolean active, Long companyId) {
+        RoleEntity role = roleRepository.findById(roleId)
+                .orElseThrow(() -> new ResourceNotFoundException("Role not found"));
+        if (!role.getCompany().getId().equals(companyId))
+            throw new UnauthorizedException("Access denied");
+        role.setActive(active);
+        return map(roleRepository.save(role));
     }
 }
